[tool.poetry]
name = "qu1ckdr0p2"
version = "2.0.1"
description = "Rapid file hosting."
authors = ["byinarie <byinarie@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
click = "8.1.3"
flask = "2.2.5"
netifaces = "0.11.0"
requests = "2.31.0"
tqdm = "4.65.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[build]
exclude = [
    "config/settings.ini
]