[tool.poetry]
name = "qu1ckdr0p2"
version = "2.3.7"
description = "Rapid file hosting."
authors = ["byinarie <byinarie@gmail.com>"]
license = "MIT"
readme = "README.md"
include = ["qu1ckdr0p2/serv.py", "qu1ckdr0p2/config/repos.ini", "qu1ckdr0p2/config/common.ini", "qu1ckdr0p2/config/settings.ini.template"]
exclude = ["*"]



[tool.poetry.dependencies]
python = "^3.11"
click = "8.1.3"
flask = "2.2.5"
netifaces = "0.11.0"
requests = "2.31.0"
tqdm = "4.65.0"
pyopenssl = "^23.2.0"
configparser = "^6.0.0"
logging = "^0.4.9.6"

[tool.poetry.scripts]
serv = "qu1ckdr0p2.serv:cli"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

