[tool.poetry]
name = "qu1ckdr0p2"
version = "2.5.6"
description = "Rapid file hosting."
authors = ["byinarie <byinarie@gmail.com>"]
license = "MIT"
readme = "README.md"
include = ["qu1ckdr0p2/serv.py"]
exclude = ["*"]



[tool.poetry.dependencies]
python = "^3.11.0"
click = "^8.0"
flask = "^2.0"
netifaces = "^0.11"
requests = "^2.31"
tqdm = "^4.0"
pyopenssl = "^23.0"
configparser = "^6.0"
halo = "^0.0.31"
keyboard = "^0.13.5"
pyperclip = "^1.8.2"

[tool.poetry.scripts]
serv = "qu1ckdr0p2.serv:cli"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

